# lib-machine-learning

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindCBLAS.cmake  FindGC.cmake
include/: ml.h  ml_common.h  ml_csv.h  ml_dataset.h  ml_knn.h  ml_math.h  ml_matrix.h  ml_memory.h  ml_metrics.h
src/: ml.c  ml_common.c  ml_csv.c  ml_dataset.c  ml_knn.c  ml_math.c  ml_matrix.c  ml_memory.c  ml_metrics.c
